[package]
name = "libcaca"
version = "0.1.0"
authors = ["shurizzle <shura1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errno = "0.2.7"
libc = "0.2.95"
libcaca-sys = { path = "../rust-libcaca-sys" }
thiserror = "1.0.25"

[features]
default = []
conio = ["libcaca-sys/conio"]
win32 = ["libcaca-sys/win32"]
x11 = ["libcaca-sys/x11"]
#cocoa = ["libcaca-sys/cocoa"]
full = ["conio", "win32", "x11"]
